--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,17 @@
-#player-bar-background {
-    --ytmusic-player-bar-background: rgb(18, 18, 18, 0.61) !important;
+:root {
+    --ytmusic-nav-bar: transparent !important;
+    --ytmusic-detail-header: transparent !important;
+    --ytmusic-player-page-background: transparent !important;
 }
 
 body {
     background-color: rgb(18, 18, 18, 0.61) !important;
+}
+
+ytmusic-app-layout.content-scrolled #nav-bar-background.ytmusic-app-layout,
+ytmusic-app-layout.content-scrolled #nav-bar-divider.ytmusic-app-layout {
+    opacity: 0 !important;
+    /* border: none; */
+    /* box-shadow: 0px 10px 20px rgb(18, 18, 18, 0.4); */
+    /* background-color: rgb(18, 18, 18, 0.61) !important; */
 }
